--- a/jitsi_meet/pubspec.yaml
+++ b/jitsi_meet/pubspec.yaml
@@ -1,7 +1,7 @@
 name: jitsi_meet
 description: Jitsi Meet Plugin - A plugin for integrating open source Jitsi Meet API in flutter. Jitsi Meet is secure, fully featured and allows completely free video conferencing made with https://jitsi.org, a collection of open source projects
 version: 4.0.0
-homepage: https://github.com/gunschu/jitsi_meet
+homepage: https://github.com/lylcsaa/jitsi-meet-plugin
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
